--- a/config/database.yml
+++ b/config/database.yml
@@ -16,4 +16,8 @@ test:
 
 production:
   <<: *default
-  database: <%= ENV['DATABASE_NAME'] %>
+  host: <%= ENV['PGHOST'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['PGPASSWORD'] %>
+  port: <%= ENV['PGPORT'] %>
+  database: <%= ENV['PGDATABASE'] %>
