--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ test:
 production:
   <<: *default
   host: <%= ENV['PGHOST'] %>
-  username: <%= ENV['POSTGRES_USER'] %>
+  username: <%= ENV['PGUSER'] %>
   password: <%= ENV['PGPASSWORD'] %>
   port: <%= ENV['PGPORT'] %>
   database: <%= ENV['PGDATABASE'] %>
