update the production database file.

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,22 +2,21 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
-  host: localhost
-  username: postgres
-  password: postgres
+  username: <%= ENV['PGUSER'] || 'postgres' %>
+  password: <%= ENV['PGPASSWORD'] || 'postgres' %>
+  port: <%= ENV['PGPORT'] || 5432 %>
+  host: <%= ENV['PGHOST'] || 'localhost' %>
 
 development:
   <<: *default
   database: geo_user_portal
+  host: localhost
 
 test:
   <<: *default
   database: geo_user_portal_test
+  host: localhost
 
 production:
   <<: *default
-  host: <%= ENV['PGHOST'] %>
-  username: <%= ENV['PGUSER'] %>
-  password: <%= ENV['PGPASSWORD'] %>
-  port: <%= ENV['PGPORT'] %>
   database: <%= ENV['PGDATABASE'] %>
